Updated assignments and codes

--- a/ML/Assignment_2b.ipynb
+++ b/ML/Assignment_2b.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Importing necessary libraries for data handling, visualization, and regression modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -28,12 +35,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Loading the dataset from a CSV file into a pandas DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\train.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Displaying structure and summary statistics of the dataset"
    ]
   },
   {
@@ -275,8 +296,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Checking for missing values in selected columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -515,6 +543,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5) Applying label encoding to convert categorical columns into numeric format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -609,6 +644,13 @@
    "source": [
     "df[\"ADDRESS\"] = label_encode.fit_transform(df[\"ADDRESS\"])\n",
     "df[\"ADDRESS\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6) Generating correlation matrix and plotting heatmap for feature analysis"
    ]
   },
   {
@@ -920,6 +962,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7) Selecting relevant features and target variable for the regression model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -930,12 +979,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8) Splitting the data into training and testing sets (80% train, 20% test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9) Creating and training a multiple linear regression model"
    ]
   },
   {
@@ -949,12 +1012,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10) Predicting house prices using the trained model on test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11) Calculating model evaluation metrics: Mean Squared Error and R² Score"
    ]
   },
   {
@@ -996,13 +1073,6 @@
    "source": [
     "r2_score(y_test, y_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
