--- a/ML/assignment_3a.ipynb
+++ b/ML/assignment_3a.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name : Mrunmayee Sandeep Damle <br>\n",
+    "T.Y B.Tech CSBS <br>\n",
+    "Roll no : 11 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Importing required libraries for data processing, visualization, and modeling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -13,12 +29,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Reading the housing dataset from CSV file into a DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\data.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Displaying dataset structure and basic statistical summary"
    ]
   },
   {
@@ -275,6 +305,13 @@
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Selecting only numerical columns to compute correlation"
    ]
   },
   {
@@ -589,12 +626,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5) Creating a new DataFrame with selected relevant features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[['price', 'bedrooms', 'bathrooms', 'sqft_living', 'floors', 'yr_built', 'city', 'country']]"
+    "df1 = df[['price', 'bedrooms', 'bathrooms', 'sqft_living', 'floors', 'yr_built', 'city', 'country']]0"
    ]
   },
   {
@@ -719,6 +763,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6) Checking for missing values in the selected columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -744,6 +795,13 @@
    ],
    "source": [
     "df1.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7) Plotting boxplots to visualize outliers in numerical features"
    ]
   },
   {
@@ -927,6 +985,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8) Detecting and removing outliers in features using IQR method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -1076,6 +1141,13 @@
     "\n",
     "df2 = df1[(df1['sqft_living'] > l_limit) & (df1['sqft_living'] < u_limit)]\n",
     "sns.boxplot(df2.sqft_living)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9) Displaying the cleaned DataFrame after outlier removal"
    ]
   },
   {
@@ -1309,6 +1381,13 @@
    ],
    "source": [
     "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10) Encoding categorical column 'city' using LabelEncoder"
    ]
   },
   {
@@ -1553,6 +1632,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11) Copying the DataFrame and encoding 'country' column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
@@ -1773,14 +1859,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12) Importing modules for model training and evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13) Displaying final DataFrame structure before modeling"
    ]
   },
   {
@@ -1815,6 +1915,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14) Defining features (X) and target (y) for linear regression "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -1822,6 +1929,13 @@
    "source": [
     "x = df3[['bedrooms', 'bathrooms', 'sqft_living', 'floors', 'yr_built', 'city', 'country']]\n",
     "y = df3[['price']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "15) Splitting the data into training and testing sets (80%-20%)"
    ]
   },
   {
@@ -1834,8 +1948,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16)  Creating and training the Linear Regression model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,6 +1971,13 @@
    "outputs": [],
    "source": [
     "y_pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "17) Evaluating model performance using Mean Squared Error and R² Score"
    ]
   },
   {
