--- a/ML/assignment_4.ipynb
+++ b/ML/assignment_4.ipynb
@@ -8,8 +8,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Name : Mrunmayee Sandeep Damle <br>\n",
+    "T.Y B.Tech CSBS <br>\n",
+    "Roll no : 11 <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Importing required libraries for data processing and visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +34,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Loading the traffic dataset from a CSV file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 734,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +50,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Displaying dataset structure and basic statistical information"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 735,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 736,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +221,7 @@
        "max     279.000000  "
       ]
      },
-     "execution_count": 736,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +231,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4) Showing the first few rows of the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 737,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +355,7 @@
        "4          16     94            normal  "
       ]
      },
-     "execution_count": 737,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +365,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5) Selecting only numerical columns to compute correlation matrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 738,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +474,7 @@
        "Total      -0.010679  0.970443   0.797429  0.790705   -0.555471  1.000000"
       ]
      },
-     "execution_count": 738,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +485,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6) Creating a new DataFrame with selected relevant columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 739,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 740,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +612,7 @@
        "4     94            normal  "
       ]
      },
-     "execution_count": 740,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,8 +622,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7) Checking for missing values in the selected DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +647,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 741,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,8 +657,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8) Plotting boxplots to detect outliers in each feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 742,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +674,7 @@
        "<Axes: ylabel='Time'>"
       ]
      },
-     "execution_count": 742,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -630,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +704,7 @@
        "<Axes: ylabel='Day_of_the_week'>"
       ]
      },
-     "execution_count": 743,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -660,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 744,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +734,7 @@
        "<Axes: ylabel='CarCount'>"
       ]
      },
-     "execution_count": 744,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 745,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +764,7 @@
        "<Axes: ylabel='BikeCount'>"
       ]
      },
-     "execution_count": 745,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -719,8 +784,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9) Removing outliers using IQR method "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 746,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +801,7 @@
        "<Axes: ylabel='BikeCount'>"
       ]
      },
-     "execution_count": 746,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -758,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 747,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +839,7 @@
        "<Axes: ylabel='BusCount'>"
       ]
      },
-     "execution_count": 747,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 748,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +869,7 @@
        "<Axes: ylabel='TruckCount'>"
       ]
      },
-     "execution_count": 748,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +899,7 @@
        "<Axes: ylabel='Total'>"
       ]
      },
-     "execution_count": 749,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -848,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +929,7 @@
        "<Axes: ylabel='Traffic_Situation'>"
       ]
      },
-     "execution_count": 750,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -877,8 +949,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10) Displaying information of DataFrame after outlier removal"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 751,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -908,15 +987,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "11) Encoding  using LabelEncoder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 752,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_13072\\3336912366.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\3336912366.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -933,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1210,7 @@
        "[2899 rows x 8 columns]"
       ]
      },
-     "execution_count": 753,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,14 +1221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_13072\\3495035982.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\3495035982.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1157,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 755,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1434,7 @@
        "[2899 rows x 8 columns]"
       ]
      },
-     "execution_count": 755,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,14 +1445,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_13072\\1246601532.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\1246601532.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1562,7 +1648,7 @@
        "[2899 rows x 8 columns]"
       ]
      },
-     "execution_count": 756,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1573,8 +1659,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "12) Importing modules for model training and evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1584,8 +1677,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "13) Displaying final structure of the processed DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1615,8 +1715,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "14) Defining features (X) and target variable (y) for classification"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,8 +1732,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "15) Splitting data into training and testing sets (80%-20%)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,8 +1748,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "16) Training the K-Nearest Neighbors classifier with k=5"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1653,8 +1774,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "17) Predicting the target variable on the test data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 778,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,8 +1790,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "18) Printing classification report to evaluate the model performance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1672,14 +1807,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.98      0.98      0.98       126\n",
-      "           1       0.95      0.84      0.89        68\n",
-      "           2       0.83      0.79      0.81        67\n",
-      "           3       0.92      0.95      0.94       319\n",
+      "           0       0.94      0.97      0.96       119\n",
+      "           1       0.90      0.81      0.85        67\n",
+      "           2       0.82      0.83      0.82        65\n",
+      "           3       0.93      0.94      0.93       329\n",
       "\n",
-      "    accuracy                           0.93       580\n",
-      "   macro avg       0.92      0.89      0.90       580\n",
-      "weighted avg       0.93      0.93      0.93       580\n",
+      "    accuracy                           0.92       580\n",
+      "   macro avg       0.90      0.89      0.89       580\n",
+      "weighted avg       0.92      0.92      0.92       580\n",
       "\n"
      ]
     }
@@ -1691,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +2017,7 @@
        "[2899 rows x 8 columns]"
       ]
      },
-     "execution_count": 782,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,8 +2027,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "19) Predicting traffic situation for a new sample input"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1919,20 +2061,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "20) Displaying the confusion matrix to assess classification accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[123,   1,   0,   2],\n",
-       "       [  1,  57,   0,  10],\n",
-       "       [  0,   0,  53,  14],\n",
-       "       [  2,   2,  11, 304]], dtype=int64)"
+       "array([[116,   1,   0,   2],\n",
+       "       [  3,  54,   0,  10],\n",
+       "       [  0,   0,  54,  11],\n",
+       "       [  4,   5,  12, 308]], dtype=int64)"
       ]
      },
-     "execution_count": 784,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
