--- a/ML/gradientDescent.ipynb
+++ b/ML/gradientDescent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    m = 0\n",
     "    b = 0\n",
     "    lr = 0.01\n",
-    "    epochs = 20\n",
+    "    epochs = 30\n",
     "    n = len(x)\n",
     "    \n",
     "    for i in range(epochs):\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -81,12 +81,32 @@
       "Cost: 1.0360648737632069e+158 m: -2.719835142847174e+80 b: -1.9230389138933915e+77\n",
       "Cost: 1.3203816670699407e+167 m: -9.709544330200344e+84 b: -6.865060050515486e+81\n",
       "Cost: 1.6827206392993212e+176 m: -3.466211963179377e+89 b: -2.4507590125550822e+86\n",
-      "Cost: 2.1444926270503342e+185 m: -1.2374036273069805e+94 b: -8.748968972484028e+90\n"
+      "Cost: 2.1444926270503342e+185 m: -1.2374036273069805e+94 b: -8.748968972484028e+90\n",
+      "Cost: 2.7329840260283415e+194 m: -4.417409417362958e+98 b: -3.1232959948063385e+95\n",
+      "Cost: 3.4829691612414995e+203 m: -1.5769717762243116e+103 b: -1.1149859945615576e+100\n",
+      "Cost: 4.438765123625176e+212 m: -5.62963435816782e+107 b: -3.9803904917616077e+104\n",
+      "Cost: 5.656850494676284e+221 m: -2.0097241741728908e+112 b: -1.4209603119845738e+109\n",
+      "Cost: 7.209202701174845e+230 m: -7.174517915883631e+116 b: -5.072688753564199e+113\n",
+      "Cost: 9.18755120637157e+239 m: -2.5612324311379384e+121 b: -1.810900063394315e+118\n",
+      "Cost: 1.1708797861370107e+249 m: -9.143348226631085e+125 b: -6.464735367998623e+122\n",
+      "Cost: 1.4921924708658945e+258 m: -3.2640855151242386e+130 b: -2.30784703270244e+127\n",
+      "Cost: 1.9016797424226038e+267 m: -1.165246470544793e+135 b: -8.238787240570915e+131\n",
+      "Cost: 2.4235384599159463e+276 m: -4.1598154546677556e+139 b: -2.9411661272849107e+136\n"
      ]
     }
    ],
    "source": [
     "gradient_desc(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Cost: 1.0360648737632069e+158 m: -2.719835142847174e+80 b: -1.9230389138933915e+77\n",
+    "\n"
    ]
   }
  ],
@@ -106,7 +126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
