--- a/ML/assignment_6.ipynb
+++ b/ML/assignment_6.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "09495ae1",
+   "metadata": {},
+   "source": [
+    "### Support Vector Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7d38e7a5",
