--- a/ML/assignment_4_11.ipynb
+++ b/ML/assignment_4_11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decision Tree Classifier & Logistic Regression: Loan Approval"
+    "### Decision Tree Classifier : Loan Approval"
    ]
   },
   {
