--- a/ML/assignment_3a.ipynb
+++ b/ML/assignment_3a.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\data.csv')"
+    "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\datasets\\data.csv')"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "max      4820.000000  2014.000000   2014.000000  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "yr_renovated  -0.321342      1.000000  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,16 +634,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[['price', 'bedrooms', 'bathrooms', 'sqft_living', 'floors', 'yr_built', 'city', 'country']]0"
+    "df1 = df[['price', 'bedrooms', 'bathrooms', 'sqft_living', 'floors', 'yr_built', 'city', 'country']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "4     USA  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "<Axes: ylabel='price'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "<Axes: ylabel='bedrooms'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "<Axes: ylabel='bathrooms'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "<Axes: ylabel='sqft_living'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "<Axes: ylabel='floors'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "<Axes: ylabel='yr_built'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
        "<Axes: ylabel='price'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
        "<Axes: ylabel='bedrooms'>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "<Axes: ylabel='bathrooms'>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1116,7 @@
        "<Axes: ylabel='sqft_living'>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
        "[4470 rows x 8 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1401,20 +1401,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_21668\\925850989.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_14960\\925850989.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df2['city'] = lb.fit_transform(df2['city'])\n",
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_21668\\925850989.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_14960\\925850989.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1622,7 @@
        "[4470 rows x 8 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1658,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1849,7 +1849,7 @@
        "[4470 rows x 8 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,16 +1982,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "46499920833.38835"
+       "221808874089.03082"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,16 +2002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4121720498414937"
+       "0.14303480153357984"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
