--- a/ML/assignment_5_11.ipynb
+++ b/ML/assignment_5_11.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\Traffic.csv')"
+    "df = pd.read_csv(r'D:\\my stuff\\Coding\\ML\\datasets\\Traffic.csv')"
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "max     279.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "4          16     94            normal  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "Total      -0.010679  0.970443   0.797429  0.790705   -0.555471  1.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "4     94            normal  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "<Axes: ylabel='Time'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "<Axes: ylabel='Day_of_the_week'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
        "<Axes: ylabel='CarCount'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "<Axes: ylabel='BikeCount'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
        "<Axes: ylabel='BikeCount'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1002,7 +1002,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\3336912366.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_20532\\3336912366.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1228,7 +1228,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\3495035982.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_20532\\3495035982.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1452,7 +1452,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_6428\\1246601532.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Mrunmayee\\AppData\\Local\\Temp\\ipykernel_20532\\1246601532.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1807,14 +1807,14 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.94      0.97      0.96       119\n",
-      "           1       0.90      0.81      0.85        67\n",
-      "           2       0.82      0.83      0.82        65\n",
-      "           3       0.93      0.94      0.93       329\n",
+      "           0       0.92      0.96      0.94       112\n",
+      "           1       0.87      0.87      0.87        68\n",
+      "           2       0.84      0.73      0.78        67\n",
+      "           3       0.93      0.94      0.93       333\n",
       "\n",
-      "    accuracy                           0.92       580\n",
-      "   macro avg       0.90      0.89      0.89       580\n",
-      "weighted avg       0.92      0.92      0.92       580\n",
+      "    accuracy                           0.91       580\n",
+      "   macro avg       0.89      0.88      0.88       580\n",
+      "weighted avg       0.91      0.91      0.91       580\n",
       "\n"
      ]
     }
@@ -2075,10 +2075,10 @@
     {
      "data": {
       "text/plain": [
-       "array([[116,   1,   0,   2],\n",
-       "       [  3,  54,   0,  10],\n",
-       "       [  0,   0,  54,  11],\n",
-       "       [  4,   5,  12, 308]], dtype=int64)"
+       "array([[108,   4,   0,   0],\n",
+       "       [  2,  59,   0,   7],\n",
+       "       [  0,   0,  49,  18],\n",
+       "       [  7,   5,   9, 312]], dtype=int64)"
       ]
      },
      "execution_count": 36,
